--- a/index1.html
+++ b/index1.html
@@ -18,7 +18,7 @@
                 
             </div>
             <div class="desc" >
-                <h4> <a class="perexod1" href="../last-changes/moneta1.html">Авраам Линкольн </a></h4>
+                <h2> <a class="perexod1" href="PROJECT-M1/moneta1/moneta1.html/">Авраам Линкольн </a></h2>
                 <ul class="desc">
                 <li>Лаосская Народно-Демократическая Республика, 2013</li> 
                 <li>Номинал — 50000 Кипов</li>
@@ -39,7 +39,7 @@
                  <span>-10%</span>
             </div>
             <div class="desc" >
-                <h4 ><a class="perexod1"href="../last-changes/moneta7.html  "> Джон Кеннеди </a></h4>
+                <h2 ><a class="perexod1"href="../last-changes/moneta7.html  "> Джон Кеннеди </a></h2>
                 <ul class="desc">
                     <li>Республика Беларусь, 2013</li> 
                     <li>Номинал — 10 Белорусских рублей</li>
@@ -61,7 +61,7 @@
                     <span>-20%</span>
                </div>
                <div class="desc" >
-                   <h4> <a class="perexod1"href="../last-changes/moneta4.html ">Томас Джефферсон</a></h4>
+                   <h2> <a class="perexod1"href="../last-changes/moneta4.html ">Томас Джефферсон</a></h2>
                    <ul class="desc">
                        <li>Республика Беларусь, 2013</li> 
                        <li>Номинал — 10 Белорусских рублей</li>
@@ -83,7 +83,7 @@
                         <span>-20%</span>
                    </div>
                    <div class="desc" >
-                       <h4> <a clas ="perexod1"href="../last-changes/moneta8.html">Франклин Д’ Рузвельт</a></h4>
+                       <h2> <a clas ="perexod1"href="../last-changes/moneta8.html">Франклин Д’ Рузвельт</a></h2>
                        <ul class="desc">
                            <li>Острова Кука, 2009</li> 
                            <li>Номинал — 5 Новозеландский доллар</li>
@@ -104,7 +104,7 @@
                             <span>-10%</span>
                        </div>
                        <div class="desc" >
-                           <h4> <a class="perexod1"href="../last-changes/moneti2.html"> Озеро Байкал</a></h4>
+                           <h2> <a class="perexod1"href="../last-changes/moneti2.html"> Озеро Байкал</a></h2>
                            <ul class="desc">
                                <li>Лаосская Народно-Демократическая Республика, 2017</li> 
                                <li>Номинал — 70000 Кип</li>
@@ -125,7 +125,7 @@
                                 <span>-20%</span>
                            </div>
                            <div class="desc" >
-                               <h4><a class="perexod1"href ="../last-changes/moneta5.html">Остров Врангеля</a></h4>
+                               <h2><a class="perexod1"href ="../last-changes/moneta5.html">Остров Врангеля</a></h2>
                                <ul class="desc">
                                    <li>Россия, 2012</li> 
                                    <li>Номинал — 3 рубля</li>
@@ -146,7 +146,7 @@
                                     <span>-10%</span>
                                </div>
                                <div class="desc">
-                                   <h4><a class="perexod1"href="../last-changes/moneta3.html">Черноклювая гагара</a> </h4>
+                                   <h2><a class="perexod1"href="../last-changes/moneta3.html">Черноклювая гагара</a> </h2>
                                    <ul class="desc">
                                        <li>Республика Палау, 2009</li> 
                                        <li>Номинал — 5 Доллар США</li>
@@ -167,7 +167,7 @@
                                         <span>-20%</span>
                                    </div>
                                    <div class="desc" >
-                                       <h4><a class="perexod1"href="../last-changes/moneta6.html">Канадский лось </a></h4>
+                                       <h2><a class="perexod1"href="../last-changes/moneta6.html">Канадский лось </a></h2>
                                        <ul class="desc">
                                            <li>Острова Кука, 2013</li> 
                                            <li>Номинал — 5 Новозеландский доллар</li>
