--- a/moneti/moneta6.html
+++ b/moneti/moneta6.html
@@ -3,18 +3,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Монеты</title>
-    <link rel="stylesheet" href="style1(son).css">
+    <link rel="stylesheet" href="../style1(son).css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="main">
         <div class="coinpict">
         <div class="coinpict1"> 
-        <img src="img/аверс Лось.png" alt="avers Jeferson">
+        <img src="../img/аверс Лось.png" alt="avers Los">
 
       </div>
         <div class="coinpict2"> 
-            <img src="img/реверс Лось.png" alt="revers jeferson">
+            <img src="../img/реверс Лось.png" alt="revers Los">
 
         </div>
 
@@ -55,7 +55,7 @@
         </tr>
     </table>
 
-    <a class="linktomain" href="../last-changes/index1.html">Назад к списку</a>
+    <a class="linktomain" href="../index1.html">Назад к списку</a>
 </div>
  </div>
 </div>
