--- a/index1.html
+++ b/index1.html
@@ -7,18 +7,15 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-       <h1> Монеты из драгоценных металлов</h1>
-    </header>
     <div class="mainclass">
+        <h1>Монеты из драгоценных металлов</h1>
         <div class="maincont">
             <div class="coin">
-                <img src="img/линкольн 1.png" alt="avers Linkoln" width="173" height="173">
+                <img class="mainimg" src="img/линкольн 1.png" alt="avers Linkoln" width="173" height="173">
                 <span>-10%</span>
-                
             </div>
-            <div class="desc" >
-                <h2> <a class="perexod1" href="PROJECT-M1/moneta1/moneta1.html/">Авраам Линкольн </a></h2>
+            <div class="divclass" >
+                <h2> <a class="perexod1" href="moneti/moneta1.html">Авраам Линкольн </a></h2>
                 <ul class="desc">
                 <li>Лаосская Народно-Демократическая Республика, 2013</li> 
                 <li>Номинал — 50000 Кипов</li>
@@ -30,16 +27,16 @@
             <div class="price">
                 <p>4 410  ₽</p>
                 <span> 4 900  ₽ </span> 
-         </div>
+            </div>
         </div>
 
              <div class="maincont">
              <div class="coin">
-                <img src="img/кеннеди 1.png" alt="avers Kennedi" width="173" height="173">
+                <img class="mainimg" src="img/кеннеди 1.png" alt="avers Kennedi" width="173" height="173">
                  <span>-10%</span>
             </div>
-            <div class="desc" >
-                <h2 ><a class="perexod1"href="../last-changes/moneta7.html  "> Джон Кеннеди </a></h2>
+            <div class="divclass" >
+                <h2 ><a class="perexod1"href="moneti/moneta7.html  "> Джон Кеннеди </a></h2>
                 <ul class="desc">
                     <li>Республика Беларусь, 2013</li> 
                     <li>Номинал — 10 Белорусских рублей</li>
@@ -57,11 +54,11 @@
            
              <div class="maincont">
                 <div class="coin">
-                   <img src="img/джефферсон 1.png" alt="avers Cefferson" width="173" height="173">
+                   <img class="mainimg" src="img/джефферсон 1.png" alt="avers Cefferson" width="173" height="173">
                     <span>-20%</span>
                </div>
-               <div class="desc" >
-                   <h2> <a class="perexod1"href="../last-changes/moneta4.html ">Томас Джефферсон</a></h2>
+               <div class="divclass" >
+                   <h2> <a class="perexod1"href="moneti/moneta4.html ">Томас Джефферсон</a></h2>
                    <ul class="desc">
                        <li>Республика Беларусь, 2013</li> 
                        <li>Номинал — 10 Белорусских рублей</li>
@@ -79,11 +76,11 @@
 
                 <div class="maincont">
                     <div class="coin">
-                       <img src="img/рузвельт 1.png" alt="avers ruzvelt" width="173" height="173">
+                       <img class="mainimg" src="img/рузвельт 1.png" alt="avers ruzvelt" width="173" height="173">
                         <span>-20%</span>
                    </div>
-                   <div class="desc" >
-                       <h2> <a clas ="perexod1"href="../last-changes/moneta8.html">Франклин Д’ Рузвельт</a></h2>
+                   <div class="divclass" >
+                       <h2> <a clas ="perexod1"href="moneti/moneta8.html">Франклин Д’ Рузвельт</a></h2>
                        <ul class="desc">
                            <li>Острова Кука, 2009</li> 
                            <li>Номинал — 5 Новозеландский доллар</li>
@@ -100,11 +97,11 @@
 
                     <div class="maincont">
                         <div class="coin">
-                           <img src="img/бобр 1.png" alt="avers bobr"width="173" height="173">
+                           <img class="mainimg" src="img/бобр 1.png" alt="avers bobr"width="173" height="173">
                             <span>-10%</span>
                        </div>
-                       <div class="desc" >
-                           <h2> <a class="perexod1"href="../last-changes/moneti2.html"> Озеро Байкал</a></h2>
+                       <div class="divclass" >
+                           <h2> <a class="perexod1"href="moneti/moneti2.html"> Озеро Байкал</a></h2>
                            <ul class="desc">
                                <li>Лаосская Народно-Демократическая Республика, 2017</li> 
                                <li>Номинал — 70000 Кип</li>
@@ -121,11 +118,11 @@
 
                         <div class="maincont">
                             <div class="coin">
-                               <img src="img/клен 1.png" alt="avers klen"width="173" height="173">
+                               <img class="mainimg" src="img/клен 1.png" alt="avers klen"width="173" height="173">
                                 <span>-20%</span>
                            </div>
-                           <div class="desc" >
-                               <h2><a class="perexod1"href ="../last-changes/moneta5.html">Остров Врангеля</a></h2>
+                           <div class="divclass" >
+                               <h2><a class="perexod1"href ="moneti/moneta5.html">Остров Врангеля</a></h2>
                                <ul class="desc">
                                    <li>Россия, 2012</li> 
                                    <li>Номинал — 3 рубля</li>
@@ -142,11 +139,11 @@
 
                             <div class="maincont">
                                 <div class="coin">
-                                   <img src="img/гагара.png" alt="avers qaqara"width="173" height="173">
+                                   <img class="mainimg" src="img/гагара.png" alt="avers qaqara"width="173" height="173">
                                     <span>-10%</span>
                                </div>
-                               <div class="desc">
-                                   <h2><a class="perexod1"href="../last-changes/moneta3.html">Черноклювая гагара</a> </h2>
+                               <div class="divclass">
+                                   <h2><a class="perexod1"href="moneti/moneta3.html">Черноклювая гагара</a> </h2>
                                    <ul class="desc">
                                        <li>Республика Палау, 2009</li> 
                                        <li>Номинал — 5 Доллар США</li>
@@ -163,11 +160,11 @@
 
                                 <div class="maincont">
                                     <div class="coin">
-                                       <img src="img/лось 1.png" alt="avers qaqara"width="173" height="173">
+                                       <img class="mainimg" src="img/лось 1.png" alt="avers los"width="173" height="173">
                                         <span>-20%</span>
                                    </div>
-                                   <div class="desc" >
-                                       <h2><a class="perexod1"href="../last-changes/moneta6.html">Канадский лось </a></h2>
+                                   <div class="divclass" >
+                                       <h2><a class="perexod1"href="moneti/moneta6.html">Канадский лось </a></h2>
                                        <ul class="desc">
                                            <li>Острова Кука, 2013</li> 
                                            <li>Номинал — 5 Новозеландский доллар</li>
