--- a/moneti/moneta1.html
+++ b/moneti/moneta1.html
@@ -3,18 +3,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Монеты</title>
-    <link rel="stylesheet" href="style1(son).css">
+    <link rel="stylesheet" href="../style1(son).css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="main">
         <div class="coinpict">
         <div class="coinpict1"> 
-        <img src="img/аверс Линкольн.png" alt="avers Linkoln">
+        <img src="../img/аверс Линкольн.png" alt="avers Linkoln">
 
       </div>
         <div class="coinpict2"> 
-            <img src="img/реверс Линкольн.png" alt="revers Linkoln">
+            <img src="../img/реверс Линкольн.png" alt="revers Linkoln">
 
         </div>
 
@@ -27,7 +27,7 @@
     <p> В центре реверса находится рельефное изображение четырехлистного клевера. Лепестки клевера, изящно исполнены из серебра 925 пробы и эмали.</p> 
     <p>Монета укомплектована подарочным демонстрационным футляром.</p>
    
-    <p class="pricea">Цена:<span>2 000  ₽</span></p>
+    <p class="pricea"> Цена: <span> 2 000  ₽</span></p>
     
     <table>
         <tr>
@@ -56,7 +56,7 @@
         </tr>
     </table>
 
-    <a class="linktomain" href="../last-changes/index1.html">Назад к списку</a>
+    <a class="linktomain" href="../index1.html">Назад к списку</a>
 </div>
  </div>
 </div>
