--- a/index1.html
+++ b/index1.html
@@ -1,17 +1,19 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Список инвестиционных монет </title>
-    <link rel="stylesheet" href="style1(son).css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-</head>
+<!DOCTYPE html>
+    <title>Document</title></head>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Список инвестиционных монет </title>
+        <link rel="stylesheet" href="style1(son).css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    </head>
 <body>
     <div class="mainclass">
         <h1>Монеты из драгоценных металлов</h1>
         <div class="maincont">
             <div class="coin">
-                <img class="mainimg" src="img/линкольн 1.png" alt="avers Linkoln" width="173" height="173">
+                <img class="mainimg"src="img/линкольн 1.png" alt="avers Linkoln" width="173" height="173">
                 <span>-10%</span>
             </div>
             <div class="divclass" >
@@ -32,11 +34,11 @@
 
              <div class="maincont">
              <div class="coin">
-                <img class="mainimg" src="img/кеннеди 1.png" alt="avers Kennedi" width="173" height="173">
+                <img class="mainimg"src="img/кеннеди 1.png" alt="avers Kennedi" width="173" height="173">
                  <span>-10%</span>
             </div>
             <div class="divclass" >
-                <h2 ><a class="perexod1"href="moneti/moneta7.html  "> Джон Кеннеди </a></h2>
+                <h2 ><a class="perexod1" href="moneti/moneta7.html  "> Джон Кеннеди </a></h2>
                 <ul class="desc">
                     <li>Республика Беларусь, 2013</li> 
                     <li>Номинал — 10 Белорусских рублей</li>
@@ -45,7 +47,7 @@
                     <li>Диаметр — 32 мм</li>
                     </ul>
             </div>
-            <div class="price">
+            <div class="price" >
                 <p>2 430  ₽</p>
                 <span>2 700  ₽</span>
             </div>  
@@ -58,7 +60,7 @@
                     <span>-20%</span>
                </div>
                <div class="divclass" >
-                   <h2> <a class="perexod1"href="moneti/moneta4.html ">Томас Джефферсон</a></h2>
+                   <h2> <a class= "perexod1" href= "moneti/moneta4.html ">Томас Джефферсон</a></h2>
                    <ul class="desc">
                        <li>Республика Беларусь, 2013</li> 
                        <li>Номинал — 10 Белорусских рублей</li>
@@ -76,11 +78,11 @@
 
                 <div class="maincont">
                     <div class="coin">
-                       <img class="mainimg" src="img/рузвельт 1.png" alt="avers ruzvelt" width="173" height="173">
+                       <img class= "mainimg"src="img/рузвельт 1.png" alt= "avers ruzvelt" width="173" height="173">
                         <span>-20%</span>
                    </div>
                    <div class="divclass" >
-                       <h2> <a clas ="perexod1"href="moneti/moneta8.html">Франклин Д’ Рузвельт</a></h2>
+                       <h2> <a class = "perexod1" href="moneti/moneta8.html">Франклин Д’ Рузвельт</a></h2>
                        <ul class="desc">
                            <li>Острова Кука, 2009</li> 
                            <li>Номинал — 5 Новозеландский доллар</li>
@@ -97,11 +99,11 @@
 
                     <div class="maincont">
                         <div class="coin">
-                           <img class="mainimg" src="img/бобр 1.png" alt="avers bobr"width="173" height="173">
+                           <img class="mainimg" src="img/бобр 1.png" alt="avers bobr" width="173" height="173">
                             <span>-10%</span>
                        </div>
                        <div class="divclass" >
-                           <h2> <a class="perexod1"href="moneti/moneti2.html"> Озеро Байкал</a></h2>
+                           <h2> <a class="perexod1" href="moneti/moneti2.html"> Озеро Байкал</a></h2>
                            <ul class="desc">
                                <li>Лаосская Народно-Демократическая Республика, 2017</li> 
                                <li>Номинал — 70000 Кип</li>
@@ -118,11 +120,11 @@
 
                         <div class="maincont">
                             <div class="coin">
-                               <img class="mainimg" src="img/клен 1.png" alt="avers klen"width="173" height="173">
+                               <img class="mainimg" src="img/клен 1.png" alt="avers klen" width="173" height="173">
                                 <span>-20%</span>
                            </div>
                            <div class="divclass" >
-                               <h2><a class="perexod1"href ="moneti/moneta5.html">Остров Врангеля</a></h2>
+                               <h2><a class="perexod1" href ="moneti/moneta5.html">Остров Врангеля</a></h2>
                                <ul class="desc">
                                    <li>Россия, 2012</li> 
                                    <li>Номинал — 3 рубля</li>
@@ -139,11 +141,11 @@
 
                             <div class="maincont">
                                 <div class="coin">
-                                   <img class="mainimg" src="img/гагара.png" alt="avers qaqara"width="173" height="173">
+                                   <img class="mainimg" src="img/гагара.png" alt="avers qaqara" width="173" height="173">
                                     <span>-10%</span>
                                </div>
                                <div class="divclass">
-                                   <h2><a class="perexod1"href="moneti/moneta3.html">Черноклювая гагара</a> </h2>
+                                   <h2><a class="perexod1" href="moneti/moneta3.html">Черноклювая гагара</a> </h2>
                                    <ul class="desc">
                                        <li>Республика Палау, 2009</li> 
                                        <li>Номинал — 5 Доллар США</li>
@@ -164,7 +166,7 @@
                                         <span>-20%</span>
                                    </div>
                                    <div class="divclass" >
-                                       <h2><a class="perexod1"href="moneti/moneta6.html">Канадский лось </a></h2>
+                                       <h2><a class="perexod1" href="moneti/moneta6.html">Канадский лось </a></h2>
                                        <ul class="desc">
                                            <li>Острова Кука, 2013</li> 
                                            <li>Номинал — 5 Новозеландский доллар</li>
